; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_RemoveTestProfiles.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_RemoveTestProfiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"sRGBlcms2.icc\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"aRGBlcms2.icc\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"graylcms2.icc\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"gray3lcms2.icc\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"linlcms2.icc\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"limitlcms2.icc\00", align 1
@.str.6 = private unnamed_addr constant [15 x i8] c"labv2lcms2.icc\00", align 1
@.str.7 = private unnamed_addr constant [15 x i8] c"labv4lcms2.icc\00", align 1
@.str.8 = private unnamed_addr constant [13 x i8] c"xyzlcms2.icc\00", align 1
@.str.9 = private unnamed_addr constant [13 x i8] c"nullcms2.icc\00", align 1
@.str.10 = private unnamed_addr constant [14 x i8] c"bchslcms2.icc\00", align 1
@.str.11 = private unnamed_addr constant [14 x i8] c"lcms2cmyk.icc\00", align 1
@.str.12 = private unnamed_addr constant [14 x i8] c"glablcms2.icc\00", align 1
@.str.13 = private unnamed_addr constant [14 x i8] c"lcms2link.icc\00", align 1
@.str.14 = private unnamed_addr constant [15 x i8] c"lcms2link2.icc\00", align 1
@.str.15 = private unnamed_addr constant [15 x i8] c"brightness.icc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @RemoveTestProfiles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RemoveTestProfiles() #0 {
  %1 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @remove(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @remove(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0))
  %10 = call i32 @remove(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.9, i64 0, i64 0))
  %11 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.10, i64 0, i64 0))
  %12 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0))
  %13 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.12, i64 0, i64 0))
  %14 = call i32 @remove(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i64 0, i64 0))
  %15 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.14, i64 0, i64 0))
  %16 = call i32 @remove(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.15, i64 0, i64 0))
  ret void
}

declare dso_local i32 @remove(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
